# teraflash-ctrl-python

./: .gitignore  CHANGELOG.md  CITATION.cff  README.MD  README.md  dummy_client.py  example.py  interface.py  main.py  plotter.py  pyproject.toml  requirements.txt  tcp.py  teraflash.py  thz_pulse.py
.github/workflows/: format.yml  publish.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  src.doctree
docs/_build/doctrees/source/: example.doctree  modules.doctree  plot.doctree  src.doctree  test_window.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/src/: interface.html  io.html  math_utils.html  pulse_detection.html  teraflash.html
docs/_build/html/_sources/: index.rst.txt  src.rst.txt
docs/_build/html/_sources/source/: src.rst.txt
docs/_build/html/source/: example.html  modules.html  plot.html  src.html  test_window.html
docs/source/: modules.rst  test_window.rst
icons/: icon.xd
old_code/: analyse_data.py  plot.py  test.py
src/: __init__.py  interface.py  math_utils.py  pulse_detection.py  teraflash.py
