[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teraflash-ctrl"
version = "1.4.1"
authors = [
    { name = "Linus Leo Stöckli", email = "linus.stoeckli@unibe.ch" },
]
description = "This Python package allows the configuration and readout of the TeraFlash Pro THz spectrometer."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy"
]
[project.urls]
"Homepage" = "https://github.com/unibe-icelab/teraflash-ctrl-python"
"Bug Tracker" = "https://github.com/unibe-icelab/teraflash-ctrl-python/issues"