[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teraflash-ctrl"
version = "1.4.3"
authors = [
    { name = "Linus Leo Stöckli", email = "linus.stoeckli@unibe.ch" },
]
description = "This Python package allows the configuration and readout of the TeraFlash Pro THz spectrometer. Use at own risk."
readme = { file = "README.md", content-type = "text/markdown" }
license-files = ["LICENSE.md"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy"
]
[project.urls]
"Homepage" = "https://github.com/unibe-icelab/teraflash-ctrl-python"
"Bug Tracker" = "https://github.com/unibe-icelab/teraflash-ctrl-python/issues"